--- a/병원%인구수_자료/readme
+++ b/병원%인구수_자료/readme
@@ -1,2 +1,9 @@
 병원 / 인구 수 코드에 필요한 자료들을 모아놓은 폴더입니다.
 k05_김태헌 작성
+
+from google.colab import files
+
+f = files.upload()
+
+위의 코드를 사용해 colab의 content파일에 첨부파일을 업로드해야 코드가 실행됩니다.
+그래프가 높을 수록 인구 수 대비 병원 밀집도가 높으니까 의료 접근성이 좋을 가능성이 큰 것을 확인할 수 있습니다.
